# vins-auto-launcher

./: CMakeLists.txt  README.md  package.xml
launch/: full_pipeline.launch  full_pipeline_predict.launch
models/: activity_rf_model.pkl  activity_scaler.pkl
scripts/: predictor_node.py  vins_odom_recorder.py
