<?xml version="1.0"?>
<package format="2">
  <name>vins_auto_launcher</name>
  <version>0.0.1</version>
  <description>Launches VINS, records odometry, runs activity predictor, and plays bag files.</description>
  <maintainer email="sajjadhossen.eee@gmail.com">Sajjad</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>

  <!-- Python dependencies -->
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-joblib</exec_depend>
  <exec_depend>python-sklearn</exec_depend>

</package>
